kubernetes/apps/media/tracearr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracearr
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://tracearr.${DOMAIN_5}/health
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - "tracearr.${DOMAIN_5}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: domain-5-subdomain-https
  rules:
    - backendRefs:
        - name: tracearr
          port: 3000
      timeouts:
        request: 0s
        backendRequest: 0s
